[gd_scene load_steps=4 format=2]

[ext_resource path="res://main_scenes/main_menu.gd" type="Script" id=1]
[ext_resource path="res://2d_resources/20180528-205447-jpg.jpg" type="Texture" id=2]
[ext_resource path="res://audio_resources/bgm.ogg" type="AudioStream" id=3]

[node name="node_toplevel" type="Node2D"]
script = ExtResource( 1 )

[node name="panel_primary" type="Panel" parent="."]
margin_left = -1.0
margin_top = 1.0
margin_right = 963.0
margin_bottom = 599.0

[node name="background_image" type="TextureRect" parent="panel_primary"]
margin_left = 1.0
margin_top = -1.0
margin_right = 41.0
margin_bottom = 39.0

[node name="20180528-205447-jpg" type="Sprite" parent="panel_primary/background_image"]
position = Vector2( 480, 300 )
scale = Vector2( 0.754988, 0.827907 )
texture = ExtResource( 2 )

[node name="button_start" type="Button" parent="panel_primary"]
margin_left = 751.681
margin_top = 408.432
margin_right = 927.681
margin_bottom = 450.432
rect_pivot_offset = Vector2( 834, -195 )
text = "START GAME"

[node name="button_howto" type="Button" parent="panel_primary"]
margin_left = 750.681
margin_top = 480.432
margin_right = 926.681
margin_bottom = 522.432
rect_pivot_offset = Vector2( 834, -195 )
text = "HOW TO PLAY"

[node name="button_leaderboard" type="Button" parent="panel_primary"]
margin_left = 751.681
margin_top = 530.432
margin_right = 927.681
margin_bottom = 572.432
text = "LEADERBOARDS"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -30.0
autoplay = true
[connection signal="pressed" from="panel_primary/button_start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="panel_primary/button_howto" to="." method="_on_button_howto_pressed"]
[connection signal="pressed" from="panel_primary/button_leaderboard" to="." method="_on_button_leaderboard_pressed"]
